--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "giajighiwtigjue",
   "version": "1.0.0",
   "description": "This is just a faster and easy to learn API for new people who is trying to learn javascript!",
-  "main": "output.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
