--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "giajighiwtigjue",
+  "name": "giajighiwtigju",
   "version": "1.0.0",
   "description": "This is just a faster and easy to learn API for new people who is trying to learn javascript!",
   "main": "index.js",
